# nlp_adversarial_attacks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: codecov.yml  main.yml  quality.yml
src/nlp_attacks/: download_data.py
